# tdms-cli

./: .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/tdms_cli/: cli.py  count_tdms_content.py  extract_group_as_csv.py  tdms_metadata_extraction.py
