[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tdms-cli"
dynamic = ["version"]
description = 'Small util to analyze TDMS files quickly via CLI'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "m-birke", email = "wesci@web.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/m-birke/tdms-cli#readme"
Issues = "https://github.com/m-birke/tdms-cli/issues"
Source = "https://github.com/m-birke/tdms-cli"

[tool.hatch.version]
path = "src/tdms_cli/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tdms_cli tests}"

[tool.coverage.run]
source_pkgs = ["tdms_cli", "tests"]
branch = true
parallel = true
omit = [
  "src/tdms_cli/__about__.py",
]

[tool.coverage.paths]
tdms_cli = ["src/tdms_cli", "*/tdms-cli/src/tdms_cli"]
tests = ["tests", "*/tdms-cli/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
