[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tdms-cli"
dynamic = ["version"]
description = "Small util to analyze TDMS files quickly via CLI"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "tdms",
  "cli",
  "command-line",
]
authors = [
  { name = "m-birke", email = "wesci@web.de" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
  "Typing :: Typed",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "nptdms",
  "pandas",
  "typer",
]

[project.urls]
Changelog = "https://github.com/m-birke/tdms-cli/blob/main/CHANGELOG.md"
Documentation = "https://github.com/m-birke/tdms-cli#readme"
Homepage = "https://github.com/m-birke/tdms-cli"
Issues = "https://github.com/m-birke/tdms-cli/issues"
Source = "https://github.com/m-birke/tdms-cli"

[project.scripts]
tu = "tdms_cli.cli:main"

[tool.hatch]
build.hooks.vcs.version-file = "src/tdms_cli/_version.py"
build.targets.wheel.packages = ["src/tdms_cli/"]

[tool.hatch.version]
source = "vcs"
raw-options = {version_scheme = "guess-next-dev"}

[tool.hatch.envs.default]
path = "./.hatch/default"
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.types]
path = "./.hatch/types"
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tdms_cli tests}"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Allow print statements
  "T201",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["tdms_cli"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[[tool.mypy.overrides]]
module = [
  "nptdms",
]
follow_untyped_imports = true
#ignore_missing_imports = true

[tool.coverage.run]
source_pkgs = ["tdms_cli", "tests"]
branch = true
parallel = true
omit = [
  "src/tdms_cli/__about__.py",
]

[tool.coverage.paths]
tdms_cli = ["src/tdms_cli", "*/tdms-cli/src/tdms_cli"]
tests = ["tests", "*/tdms-cli/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
